protocols/tests/adders/adder_d1/busy_wait_fail.out
error: The two expressions did not evaluate to the same value
   ┌─ adders/adder_d1/busy_wait.prot:21:15
   │
21 │     assert_eq(s, DUT.s);
   │               ^^^^^^^^ LHS Value: ValueOwned(00000000000000000000001111100111), RHS Value: ValueOwned(00000000000000000000000000000011)

